--- a/drift/scripts-local.html
+++ b/drift/scripts-local.html
@@ -14,7 +14,8 @@ function displayDruid(druid) {
 		return;
 	}
 	var letter = druid.charAt(0);
-	var file = "data/" + letter + "/" + druid + "_drift.json";
+	var prefix = "https://supra.stanford.edu/drift/";
+	var file = prefix + "data/" + letter + "/" + druid + "_drift.json";
 	PLOT.data.url = file;
 	vegaEmbed("#plot", PLOT);
 	var element = document.querySelector("#info");
