--- a/image-analysis/styles-local.html
+++ b/image-analysis/styles-local.html
@@ -1,6 +1,30 @@
 
 <style>
 
+.scroll {
+    height: 100%;
+    overflow-x: scroll;    
+    white-space: nowrap;
+    width: 1024px;
+}
+
+.scroll img {
+    height: 100%;
+    vertical-align: top;
+}
+
+h2 {
+	margin-top: 40px;
+}
+
+#mycontent {
+	font-size: 2.25rem;
+}
+
+table.tear > tbody > tr > td {
+	padding: 20px;
+}
+
 a {
 	color: #991515;
 }
