--- a/stats/scripts-local.html
+++ b/stats/scripts-local.html
@@ -387,7 +387,7 @@ function displayScanStats(list, selector) {
 		output += "</td>";
 
 		output += "<td style='text-align:center;'>";
-		output += "<a target='_blank' href='/image-analysis/?id=";
+		output += "<a target='_blank' href='/image-analysis/?druid=";
 		output += list[i].DRUID;
 		output += "'>";
 		output += "X";
