Add shift analysis page.

--- a/stats/scripts-local.html
+++ b/stats/scripts-local.html
@@ -390,7 +390,7 @@ function displayScanStats(list, selector) {
 		output += "<a target='_blank' href='/image-analysis/?druid=";
 		output += list[i].DRUID;
 		output += "'>";
-		output += "X";
+		output += "<i class='fa fa-eye'></i>";
 		output += "</a>";
 		output += "</td>";
 	}
