Add histogram of shifts.

--- a/shifts/listeners.html
+++ b/shifts/listeners.html
@@ -69,6 +69,7 @@ function doAction(rollInfo) {
 
 function doAction2(shifts) {
 	console.log("SHIFTS", shifts);
+	displayHistogram();
 	displayShiftStats();
 	displayShiftList();
 }
