Add infrastructure for magnify.

--- a/leader/listeners.html
+++ b/leader/listeners.html
@@ -1,3 +1,10 @@
+
+
+<!--
+ include scripts/magnify/magnify.html
+-->
+
+
 {% include scripts/scripts-common.html %}
 
 <script>{% include scripts/aton.js %}</script>
