--- a/leader/styles-local.html
+++ b/leader/styles-local.html
@@ -1,13 +1,22 @@
 
 <style>
 
-img {
-  -webkit-filter: brightness(130%); /* Safari */
-  filter: brightness(130%);
+.magnify > .magnify-lens {
+  width: 500px;
+  height: 500px;
+}
+
+.bright img {
+  -webkit-filter: brightness(150%); /* Safari */
+  -moz-filter: brightness(150%);
+  -os-filter: brightness(150%);
+  -o-filter: brightness(150%);
+  filter: brightness(150%);
 }
 
 
 .button {
+	margin-top: 20px;
 	background-color:#8f1515;
 	border-radius:18px;
 	border:1px solid #ab1829;
