Add url to full-size leader

--- a/leader/scripts-local.html
+++ b/leader/scripts-local.html
@@ -121,11 +121,11 @@ function displayLeader(druid) {
 
 	var output = "";
 	output += "<div class='bright' style='min-height:200px;'>";
-	// output += "<a href='" + bigurl + "'>";
+	output += "<a href='" + bigurl + "'>";
 	output += "<img id='leader-image' class='rotate' src='";
 	output += url;
 	output += "'>";
-	// output += "</a>";
+	output += "</a>";
 	output += "</div>";
 	element.innerHTML = output;
 
