Missing aton script?

--- a/drift/listeners.html
+++ b/drift/listeners.html
@@ -1,5 +1,7 @@
 {% include scripts/scripts-common.html %}
 
+<script>{% include scripts/aton.js %}</script>
+
 {% include_relative scripts-local.html %}
 {% include_relative styles-local.html %}
 
