Adjust markdown headers.

--- a/image-analysis/styles-local.html
+++ b/image-analysis/styles-local.html
@@ -1,6 +1,15 @@
 
 <style>
 
+.navy {
+	font-size: 3rem;
+	color: #999;
+}
+.navy:hover {
+	color: #8b1515;
+	cursor: pointer;
+}
+
 .scroll {
     height: 100%;
     overflow-x: scroll;    
