Add basic quality summary tags to IA link text.

--- a/scripts-local.html
+++ b/scripts-local.html
@@ -5,6 +5,7 @@
 // vim: ts=3
 
 function displayList(list, query, peeps) {
+	BuildQualityTags(list);
 	reportMatches(list);
 	var output = "";
 
@@ -250,7 +251,6 @@ function prepareWmCatalog(text) {
 }
 
 </script>
-
 
 
 
