--- a/styles-local.html
+++ b/styles-local.html
@@ -1,6 +1,21 @@
 
 <style>
 
+
+a .good, .good, .good a {
+	color: #040 !important;
+}
+
+a .bad, .bad, .bad a {
+	color: #530 !important;
+}
+
+a .verybad, .verybad, .verybad a {
+	color: #fff !important;
+	font-weight: bold;
+}
+
+
 div#su-content {
 	min-height: 700px;
 }
