--- a/duplicates/scripts-local.html
+++ b/duplicates/scripts-local.html
@@ -41,7 +41,7 @@ function displayDuplicates(list, selector, peeps) {
 	output += " In other words, copies of the same recording that may or";
 	output += " may not have differences.";
 	output += " In otherwords, there can be (as has been seen), different";
-	output += " expresion tracking on different rolls with the same ";
+	output += " expression tracking on different rolls with the same ";
 	output += " manufacturer catalog number.";
 	
 
