Some improvement in the MIDI file description.

--- a/midi-spec/styles-local.html
+++ b/midi-spec/styles-local.html
@@ -1,6 +1,18 @@
 
 <style>
 
+p {
+	font-size: 2.5rem !important;
+}
+
+li {
+	font-size: 2.25rem !important;
+}
+
+a {
+	color: #ac6565;
+}
+
 figure {
 	margin-top: 50px;
 	margin-bottom: 50px;
@@ -36,11 +48,13 @@ h1 {
 }
 
 h2 {
+	font-size: 3rem;
 	padding-top: 30px;
 	padding-bottom: 10px;
 }
 
 h3 {
+	font-size: 2.5rem;
 	padding-top: 20px;
 	padding-bottom: 10px;
 	color: #891515;
@@ -59,9 +73,11 @@ input#search {
 td {
 	vertical-align: baseline;
 	padding-right: 10px;
+	font-size: 2.0rem !important;
 }
 
 th {
+	font-size: 2.25rem !important;
 	color: #820000;
 	cursor: pointer;
 }
